tests/ui/lazy-type-alias/inherent-impls-overflow.next.stderr
error[E0271]: type mismatch resolving `Loop normalizes-to _`
  --> $DIR/inherent-impls-overflow.rs:10:6
   |
LL | impl Loop {}
   |      ^^^^ types differ

error: type parameter `T` is only used recursively
  --> $DIR/inherent-impls-overflow.rs:14:24
   |
LL | type Poly0<T> = Poly1<(T,)>;
   |            -           ^
   |            |
   |            type parameter must be used non-recursively in the definition
   |
   = help: consider removing `T` or referring to it in the body of the type alias
   = note: all type parameters must be used in a non-recursive way in order to constrain their variance

error: type parameter `T` is only used recursively
  --> $DIR/inherent-impls-overflow.rs:17:24
   |
LL | type Poly1<T> = Poly0<(T,)>;
   |            -           ^
   |            |
   |            type parameter must be used non-recursively in the definition
   |
   = help: consider removing `T` or referring to it in the body of the type alias
   = note: all type parameters must be used in a non-recursive way in order to constrain their variance

error[E0275]: overflow evaluating the requirement `Poly0<()> == _`
  --> $DIR/inherent-impls-overflow.rs:21:6
   |
LL | impl Poly0<()> {}
   |      ^^^^^^^^^
   |
   = help: consider increasing the recursion limit by adding a `#![recursion_limit = "256"]` attribute to your crate (`inherent_impls_overflow`)

error: aborting due to 4 previous errors

Some errors have detailed explanations: E0271, E0275.
For more information about an error, try `rustc --explain E0271`.
